--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Lucas Gabriel Bitencourte Pedroso",
   "license": "MIT",
   "devDependencies": {
+    "@types/plotly.js-dist-min": "^2.3.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
@@ -17,6 +18,6 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "plotly.js": "^2.26.0"
+    "plotly.js-dist-min": "^2.26.0"
   }
 }
