--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "plotly.js": "^2.27.0",
     "plotly.js-dist-min": "^2.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "vike": "^0.4.143",
     "vike-react": "^0.3.0"
   },
@@ -21,6 +23,7 @@
     "@types/plotly.js-dist-min": "^2.3.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-plotly.js": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
